hongxin_podvolume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - name: bear
    image: supergiantkir/animals:bear
    volumeMounts:
    - name: app-storage
      mountPath: /storage
  - name: music
    image: yanivomc/spring-music:latest
    volumeMounts:
    - name: app-storage
      mountPath: /storage
  volumes:
  - name: app-storage
    hostPath:
      path /tmp/filies
      type: DirectoryOrCreate
