hongxin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-ui
spec:
  selector:
    app: service-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
